--- a/app/views/quiz_questions/new.html.erb
+++ b/app/views/quiz_questions/new.html.erb
@@ -15,7 +15,7 @@
 			<br/><br/>Please ensure that you can reproduce your errors before submitting your "buggy" question for review. <strong>The Correct 
 				Answer box below <u>must</u> contain the exact answer that the person will enter to answer the question correctly.</strong>
 
-			<br/><br/>Please review the <a href="http://community.cloudspokes.com/cloudspokes/products/cloudspokes_faq_s" target="_blank">FAQs</a> for additional information on payments. <%= link_to "Click here", questions_authored_path %> to view the questions that you have submitted and their approval and payment status.</p>
+			<br/><br/>Please review the <a href="/faq" target="_blank">FAQs</a> for additional information on payments. <%= link_to "Click here", questions_authored_path %> to view the questions that you have submitted and their approval and payment status.</p>
 			
 			<% if @question.errors.any? %>
 				<div class="error" id="flash-error" style="margin-top:0px;">
