--- a/app/views/challenge_admin/_challenge-sidebar.html.erb
+++ b/app/views/challenge_admin/_challenge-sidebar.html.erb
@@ -28,10 +28,15 @@
 	<li style="display:block;"><h3>Participants</h3>
 		<strong><span><a href="<%= registrants_path %>"><%= pluralize(@challenge_detail["Registered_Members__c"].to_i, 'Member') %> Registered</a></span></strong>
 	</li>
-	<% if !@challenge_detail["License__c"].nil? %>
-	<li style="display:block;"><h3>License</h3>
-		<strong><span><% if @challenge_detail["Release_to_Open_Source__c"] %>The results of this challenge will be released at <a href="http://www.github.com/cloudspokes" target="_blank">GitHub</a> under a <% end %><%= @challenge_detail["License__c"] %> license</span></strong>
-	</li>
+
+	<% unless @challenge_detail['License_Type__r'].nil? %>
+		<li style="display:block;"><h3>License</h3>
+			<strong><span>
+				<%= link_to @challenge_detail['License_Type__r']['Name'], @challenge_detail['License_Type__r']['URL__c'], :target => '_blank' %>
+				<% if @challenge_detail["Release_to_Open_Source__c"] %> - The results of this challenge will be<br/>released at <a href="http://www.github.com/cloudspokes" target="_blank">GitHub.</a><% end %></span></strong>
+		</li>
+	<% end %>
+	
 	<% end %>
 	<li><h3>Assets</h3>
 		<ul>
