added link to youtube video

--- a/app/views/accounts/scorecard.html.erb
+++ b/app/views/accounts/scorecard.html.erb
@@ -332,6 +332,8 @@ var INPUT_JSON = '{  " {\'Success\':\'True\',\'Message\':\'Query Ran Successfull
 
 <p>Remember, participants are only eligible for money if they score 75%+ for the total scorecard. If we are awarding money for multiple places, then please score accordingly. </p>
 
+<p>If you need more info, we've put together a <a href="http://youtu.be/g6NqK1eMwGs" target="_blank">3 minute overview video</a> on scoring challenges.</p>
+
 <% if @scored %><h1>This scorecard has been scored and is not updateable.</h1><% end %>
 <div id="scorecard"></div>
 <form id="scorecard_form" action="<%= scorecard_save_path %>" method="post">
