added additional help text

--- a/app/views/accounts/scorecard.html.erb
+++ b/app/views/accounts/scorecard.html.erb
@@ -328,6 +328,8 @@ var INPUT_JSON = '{  " {\'Success\':\'True\',\'Message\':\'Query Ran Successfull
 
 <p>If a criteria isn't applicable (e.g., a question pertaining to the quality of a trigger but their solution does not contain a trigger), please give them a score equivalent to 3 (75%) as it will not negatively impact thier chance of winning money.</p>
 
+<p>In addition to downloading and running a participant's code and test cases, inspecting code and viewing any included documentation and videos, <b>please make sure you read all of posts on the challenge discussion board</b>. There may be comments from participants or CloudSpokes team members that may impact the judging process.</p>
+
 <p><b>Comments are extremely important</b> to the developers that submit code and are one of the key aspects of CloudSpokes. <b>Please</b> do not leave them blank or enter comments like 'No Comment' or 'Nothing'. Make an effort to enter comments that explain your score or, even better, ways to make their code better.</p>
 
 <p>Remember, participants are only eligible for money if they score 75%+ for the total scorecard. If we are awarding money for multiple places, then please score accordingly. </p>
