tweaked help text again.

--- a/app/views/accounts/scorecard.html.erb
+++ b/app/views/accounts/scorecard.html.erb
@@ -332,7 +332,7 @@ var INPUT_JSON = '{  " {\'Success\':\'True\',\'Message\':\'Query Ran Successfull
 
 <p>If you need more info, we've put together a <a href="http://youtu.be/g6NqK1eMwGs" target="_blank">3 minute overview video</a> on scoring challenges.</p>
 
-<p><b>Comments are extremely important</b> to the developers that submit code and are one of the key aspects of CloudSpokes. <b>Please</b> do not leave them blank or enter comments like 'No Comment' or 'Nothing'. Make an effort to enter comments that explain your score or, even better, ways to make their code better.</p>
+<p><b>Comments! Comments! Comments!</b> Comments are extremely important to the developers that submit code and are one of the key features of CloudSpokes. <b>Please</b> do not leave them blank or enter comments like 'No Comment' or 'Nothing'. Make an effort to enter comments that explain your score or, even better, ways to make their code better.</p>
 
 <p>Remember, participants are only eligible for money if they score 75%+ for the total scorecard. If we are awarding money for multiple places, then please score accordingly. </p>
 
