added badgeville public api var

--- a/app/views/members/_badgeProfile.html.erb
+++ b/app/views/members/_badgeProfile.html.erb
@@ -8,7 +8,7 @@
     window.BadgevilleAsynchInit = function() {
 
       Badgeville.extend( Badgeville.Settings, {
-        key: '<%= ENV['BADGEVILLE_API_KEY'] %>',
+        key: '<%= ENV['BADGEVILLE_PUBLIC_API_KEY'] %>',
         domain: '<%= ENV['BADGEVILLE_DOMAIN'] %>'
         // Add other Badgeville.Settings changes
       });
