--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -1,2 +1,64 @@
-<h1>Communities#show</h1>
-<p>Find me in app/views/communities/show.html.erb</p>
+<div class="page-heading"><h2 class="melbourne"><%= @community['Name'] %> Private Community</h2></div>
+
+<div class="content-wrapper">
+	
+	<div style="width:600px;float:left">
+	
+		<%= raw(@community['About__c'])%> 
+		<br clear="all">
+
+		<h3 style="padding-top:10px"><%= pluralize(@challenges.size, "challenge") %> to compete in!</h3>
+
+		<div style="padding-bottom:15px"></div>
+		
+		<% @challenges.each do |record| %>
+			<h4 style="margin-bottom:5px"><%= link_to "#{record["Name"]}", challenge_url(record['Challenge_Id__c']) %></h4>
+			<span style="font-weight:bold"><%= format_close_date(record['End_Date__c'].to_s) %> for <%= record['Top_Prize__c'] %></span>
+			<p><%= raw(truncate(record["Description__c"].gsub(/<\/?[^>]*>/, ""), :length => 400, :separator => ' ')) %></p>
+			<a class="button fl" href="<%= challenge_url(record['Challenge_Id__c']) %>"><span>View Details</span></a>
+			<div style="padding-top:50px"></div>
+		<% end %>
+	
+	</div>
+	
+	<div style="width:50px; float:left">&nbsp;</div>
+
+	<div style="width:225px; float:left">
+		
+		<h3><%= @community['Name'] %> Leaderboard</h3>
+
+    <% if @leaderboard.size > 0 %>
+    	<div class="leaders">
+      	<ul style="padding: 0px;">
+                        
+					<% @leaderboard[0..9].each do |record| %>
+                <li class="leader"><span class="num<% if record['position']==1 %> num-gold<% elsif record['position']==2 %> num-silver<% elsif record['position']==3 %> num-bronze<% end %> fl"><%= record['position'] %></span>
+                    <div class="user-box box fl">
+                        <div class="box-b">
+                            <div class="box-t">
+                                <a href='<%= member_path(record["username"]) %>' class="fl">
+                                    <img src="<%= record["profile_pic"] %>" Width="48px" Height="48px" style="border-width:0px;" /></a>
+                                <div class="user-info fl">
+                                    <h4><a href='<%= member_path(record["username"]) %>'><%= record["username"] %></a></h4>
+                                    <span class="stats" style="padding-top:5px">
+                                        <%= record["points"] %> points<br />
+                                        <%= pluralize(record["active"], 'active challenge') %>
+                                    </span>
+                                </div>
+                                <div class="cl">&nbsp;</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cl">&nbsp;</div>
+                </li>
+					<% end %>
+
+        </ul>
+      </div>
+	<% else %>
+		<p style="padding-top: 10px">No leaderboard results yet for this time month.</p>
+	<% end %>				
+		
+	</div>
+
+</div>
